[package]
name = "aws_stats_processor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.14.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
aws-config = "1.1.4"
aws-sdk-s3 = "1.10.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
anyhow = "1.0"
uuid = { version = "*", features = ["v4"] } 
